Wrong height, fixed

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1107,6 +1107,7 @@ div#blanket {
    top:0px;
    left:0px;
    width:100%;
+   height:100%;
 }
 
 div#infoWindow { /* TODO: Making it more prettier */
